--- a/src/b_sensors.yaml
+++ b/src/b_sensors.yaml
@@ -17,6 +17,7 @@
           - binary_sensor.dev61_motion
           - binary_sensor.dev71_motion
           - binary_sensor.dev72_motion
+          - binary_sensor.dev73_motion
 # -------------- all motion sensors -------------
 
 # -------------- templates ----------------------
@@ -39,6 +40,10 @@
   - platform: mqtt
     state_topic: "std/dev72/s/pir/status"
     name: "dev72_motion"
+    device_class: motion
+  - platform: mqtt
+    state_topic: "std/dev73/s/pir/status"
+    name: "dev73_motion"
     device_class: motion
 # -------------- octoprint sensor ---------------
   - platform: octoprint
