--- a/src/sensors.yaml
+++ b/src/sensors.yaml
@@ -248,17 +248,19 @@
     name: "dev11_humidity_dht1"
     unit_of_measurement: "%"
 # -----------------------------------------------------------
-  - platform: darksky
-    api_key: !secret darksky_key
-    monitored_conditions:
-      - temperature_max
-      - temperature_min
-      - precip_intensity
-      - precip_probability
-      - temperature
-      - apparent_temperature
-      - cloud_cover
-      - daily_summary
+#  - platform: darksky
+#    api_key: !secret darksky_key
+  #  auth_providers:
+  #    - type: legacy_api_password
+ #   monitored_conditions:
+ #     - temperature_max
+ #     - temperature_min
+ #     - precip_intensity
+ #     - precip_probability
+ #     - temperature
+ #     - apparent_temperature
+ #     - cloud_cover
+ #     - daily_summary
 #      - summary
 #      - icon
 #      - precip_type
@@ -277,7 +279,7 @@
       - type: memory_free
       - type: processor_use
       - type: last_boot
-      - type: since_last_boot
+#      - type: since_last_boot
 # -----------------------------------------------------------
   - platform: octoprint
     name: OctoPrint
@@ -286,17 +288,17 @@
     - Temperatures
     - Job Percentage
 # ------------------- WUNDERGROUND --------------------------
-  - platform: wunderground
-    api_key: !secret wu_key
-    pws_id: ILBCELLE7
-    lang: DL
-    monitored_conditions:
-      - weather_1d_metric
-      - weather_1n_metric
-      - weather_2d_metric
-      - weather_2n_metric
-      - weather_3d_metric
-      - weather_3n_metric
-      - weather_4d_metric
-      - weather_4n_metric
+#  - platform: wunderground
+#    api_key: !secret wu_key
+#    pws_id: ILBCELLE7
+#    lang: DL
+#    monitored_conditions:
+#      - weather_1d_metric
+#      - weather_1n_metric
+#      - weather_2d_metric
+#      - weather_2n_metric
+#      - weather_3d_metric
+#      - weather_3n_metric
+#      - weather_4d_metric
+#      - weather_4n_metric
 # -----------------------------------------------------------
