migration to hassio 102
minor changes on configuration file
cleaned up some old files like the old devices text file

--- a/src/configuration.yaml
+++ b/src/configuration.yaml
@@ -16,6 +16,9 @@ homeassistant:
 # Show links to resources in log and frontend
 #introduction:
 
+# Example configuration.yaml entry
+mobile_app:
+
 # Enables the frontend
 frontend:
 
@@ -28,7 +31,7 @@ weather:
 
 http:
   # Secrets are defined in the file secrets.yaml
-  api_password: !secret http_password
+  #api_password: !secret http_password
   # Uncomment this if you are using SSL/TLS, running in Docker container, etc.
   # base_url: example.duckdns.org:8123
 
