--- a/src/raw_config.yaml
+++ b/src/raw_config.yaml
@@ -84,6 +84,12 @@ views:
         show_header_toggle: false
         title: Garten
         type: entities
+      - type: entities
+        entities:
+          - entity: binary_sensor.dev63_motion
+          - entity: light.dev63
+        title: Gartenhaus
+        show_header_toggle: false
     icon: 'mdi:home'
     path: default_view
     title: Home
