--- a/src/raw_config.yaml
+++ b/src/raw_config.yaml
@@ -84,12 +84,22 @@ views:
         show_header_toggle: false
         title: Garten
         type: entities
-      - type: entities
-        entities:
+      - entities:
           - entity: binary_sensor.dev63_motion
           - entity: light.dev63
-        title: Gartenhaus
         show_header_toggle: false
+        title: Gartenhaus
+        type: entities
+      - entities:
+          - entity: sensor.dev75_temperature_dht
+          - entity: sensor.dev75_humidity_dht
+          - entity: sensor.dev75_brightness_temt6000
+          - entity: binary_sensor.dev75_motion
+          - entity: light.dev75
+          - entity: light.dev75b
+        show_header_toggle: false
+        title: Flur oben
+        type: entities
     icon: 'mdi:home'
     path: default_view
     title: Home
@@ -260,4 +270,17 @@ views:
     icon: 'mdi:waves'
     path: groups_humid
     title: Humidity
+  - badges: []
+    cards:
+      - entity: weather.dark_sky
+        name: Vorhersage
+        type: weather-forecast
+      - aspect_ratio: 50%
+        title: Radar
+        type: iframe
+        url: >-
+          https://embed.windy.com/embed2.html?lat=51.645&lon=8.921&zoom=5&level=surface&overlay=rain&menu=&message=&marker=true&calendar=&pressure=&type=map&location=coordinates&detail=&detailLat=52.617&detailLon=10.083&metricWind=km%2Fh&metricTemp=%C2%B0C&radarRange=-1
+    icon: 'mdi:weather-sunny'
+    path: wetter
+    title: Wetter
 
