--- a/src/sensors.yaml
+++ b/src/sensors.yaml
@@ -237,11 +237,16 @@
     state_topic: "std/dev75/s/temp_hum/hum"
     name: "dev75_humidity_dht"
     unit_of_measurement: "%"
-
+  
   - platform: mqtt
     state_topic: "std/dev75/s/temt6000/raw"
     name: "dev75_brightness_temt6000"
     unit_of_measurement: "raw"
+
+  - platform: mqtt
+    state_topic: "std/dev75/s/health/tic"
+    name: "dev75_health_tic"
+    unit_of_measurement: "cnt"
 # -----------------------------------------------------------
   - platform: mqtt
     state_topic: "dev11/#"
