--- a/src/raw_config.yaml
+++ b/src/raw_config.yaml
@@ -40,14 +40,10 @@ views:
         title: Flur unten
         type: entities
       - entities:
-          - sensor.dev73_temperature_dht
-          - sensor.dev73_humidity_dht
-          - sensor.dev73_brightness_temt6000
-          - binary_sensor.dev73_motion
-          - light.dev73
-          - light.dev04
+          - sensor.dev23_temperature_dht
+          - sensor.dev23_humidity_dht
         show_header_toggle: false
-        title: Flur oben
+        title: Dachboden
         type: entities
       - entities:
           - sensor.dev71_temperature_dht
@@ -63,10 +59,14 @@ views:
         title: Carport
         type: entities
       - entities:
-          - sensor.dev23_temperature_dht
-          - sensor.dev23_humidity_dht
+          - entity: sensor.dev75_temperature_dht
+          - entity: sensor.dev75_humidity_dht
+          - entity: sensor.dev75_brightness_temt6000
+          - entity: binary_sensor.dev75_motion
+          - entity: light.dev75
+          - entity: light.dev75b
         show_header_toggle: false
-        title: Dachboden
+        title: Flur oben
         type: entities
       - entities:
           - sensor.dev28_temperature_dht
@@ -91,12 +91,12 @@ views:
         title: Gartenhaus
         type: entities
       - entities:
-          - entity: sensor.dev75_temperature_dht
-          - entity: sensor.dev75_humidity_dht
-          - entity: sensor.dev75_brightness_temt6000
-          - entity: binary_sensor.dev75_motion
-          - entity: light.dev75
-          - entity: light.dev75b
+          - sensor.dev73_temperature_dht
+          - sensor.dev73_humidity_dht
+          - sensor.dev73_brightness_temt6000
+          - binary_sensor.dev73_motion
+          - light.dev73
+          - light.dev04
         show_header_toggle: false
         title: Flur oben
         type: entities
@@ -112,6 +112,11 @@ views:
           - entity: sensor.last_boot
         show_header_toggle: false
         title: System
+        type: entities
+      - entities:
+          - entity: sensor.dev75_health_tic
+        show_header_toggle: false
+        title: Device Health Status
         type: entities
       - entities:
           - light.dev01
